@@ -1660,16 +1660,6 @@ ex.:
   ssl_verify_hostnames = 1
 
 
-==== use_curl
-
-Enable curl library to speed up http connections, for example used by
-the HTTP backend provider. Disabled by default.
-
-ex.:
-
-  use_curl = 1
-
-
 
 
 
