@@ -46,7 +46,6 @@ sub new {
         'remote_name'          => $options->{'remote_name'} || '', # request this remote peer
         'remotekey'            => '',
         'min_backend_version'  => 1.63,
-        'has_curl'             => 0,
     };
     bless $self, $class;
 
@@ -124,13 +123,6 @@ sub reconnect {
 
     if(defined $self->{'logcache'}) {
         $self->{'logcache'}->reconnect();
-    }
-
-    # try to use LWP::Protocol::Net::Curl to speed things up
-    if($self->{'config'}->{'use_curl'}) {
-        if(Thruk::Utils::load_lwp_curl($self->{'config'}->{'options'}->{'proxy'})) {
-            $self->{'has_curl'} = 1;
-        }
     }
 
     # correct address
