@@ -52,8 +52,6 @@ my $pass_regex          = qr#^$urlprefix/(startup\.html|themes|javascript|cgi\-b
 my $cookie_regex        = qr/thruk_auth=(\w+)/mx;
 my $session_split       = qr/~~~/mx;
 my $last_cache_clean    = time();
-my $curl_error_printed  = 0;
-$ENV{'USE_CURL'}        = $config->{'use_curl'};
 
 ##########################################################
 while (<STDIN>) {
@@ -64,10 +62,6 @@ while (<STDIN>) {
     print process($in);
     my $elapsed = tv_interval ( $t0 );
     printf(STDERR " (took %.3f sec)\n",$elapsed) if $verbose;
-    if($curl_error_printed == 0 && $ENV{'THRUK_CURL_ERROR'}) {
-        printf STDERR $ENV{'THRUK_CURL_ERROR'};
-        $curl_error_printed = 1;
-    }
 }
 
 ##########################################################
