@@ -34,7 +34,6 @@ if(defined Thruk->config->{'Thruk::Backend'}->{'peer'}) {
     if(ref $backends ne 'ARRAY') { $backends = [$backends]; }
     for my $backend (@{$backends}) {
         delete $backend->{options}->{name};
-        delete $backend->{use_curl};
         delete $backend->{options}    if scalar keys %{$backend->{options}}    == 0;
         delete $backend->{configtool} if scalar keys %{$backend->{configtool}} == 0;
     }
