@@ -129,10 +129,6 @@ delay_pages_after_backend_reload = 0
 ssl_verify_hostnames=1
 
 ######################################
-# use_curl for http(s) connections. This can speed up accessing remote backends.
-#use_curl=0
-
-######################################
 # start page
 # add a custom start page which will be displayed instead of the useless page
 # with version information.
